# finpost

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PLAN.md  README.md  RUNPOD_RUNBOOK.html  SECURITY.md  STUDY.md  pyproject.toml
.scratch/: README.md
.scratch/finchain-rlvr-posttraining/: PRD.md
.scratch/phase1-base-vs-sft-eval/: PRD.md
.scratch/phase1-compute-aware-post-training/: PRD.md
.scratch/phase1-data-loading/: PRD.md
.scratch/phase1-dpo-comparison/: PRD.md
.scratch/phase1-grpo-research/: PRD.md
.scratch/phase1-sft-trainer/: PRD.md
.scratch/phase1-training-runbook/: PRD.md
.scratch/phase2-filing-distillation-dataset/: PRD.md
.scratch/repo-skeleton/: PRD.md
.scratch/runpod-canary-and-runbook/: PRD.md
.scratch/sft-trainer-skeleton/: PRD.md
.scratch/templates/: cost-gate-checklist.md
data/: README.md
docs/: distributed-training-and-platforms.html  distributed-training-and-platforms.md  dpo-study.html  dpo-study.md  finchain-rlvr-professor-study.html  grpo-study.md  opd-study.md  phase1-sft-study.html
docs/adr/: 0001-qwen-0-5b-for-phase-1.md  0002-finchain-first-rlvr-roadmap.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/primers/: training-memory.md
docs/runbooks/: finchain-rlvr-study-flow.html  finchain-rlvr-study-flow.md  phase1-training-runbook.md  runpod-bootstrap.md  runpod-end-to-end.html  runpod-end-to-end.md
experiments/: baseline.yaml  colab_qwen_500m.yaml  local_tiny_gpt2.yaml  multitask_combined_qwen.yaml  multitask_gsm8k_only_qwen.yaml  multitask_math_only_qwen.yaml
experiments/dpo/: finchain_qwen25_1_5b.yaml  qwen_dpo_baseline.yaml
experiments/finchain/: local_tiny_gpt2_sft.yaml  qwen25_1_5b_sft_runpod.yaml
experiments/runpod/: gsm8k_only_1000.yaml  math_only_1000.yaml
notebooks/: colab_phase1_eval_and_cost_tracking.ipynb  dpo_phase1_runpod.ipynb  finchain_00_dataset_and_verifier.ipynb  finchain_00_model_bakeoff.ipynb  finchain_01_sft_lora.ipynb  finchain_02_rollouts_and_buckets.ipynb  finchain_03_rejection_sft_and_opd.ipynb  finchain_04_grpo.ipynb  finchain_05_transfer_and_writeup.ipynb  finchain_06_distributed_training_lab.ipynb  finchain_10_dpo_runpod.ipynb  finchain_11_opd_runpod.ipynb  finchain_12_grpo_runpod.ipynb  kaggle_phase1_eval_and_cost_tracking.ipynb  sft_phase1_colab.ipynb  sft_phase1_kaggle.ipynb  sft_phase1_kaggle_ablation_complete.ipynb  sft_phase1_kaggle_ablation_v0.ipynb  sft_phase1_multitask.ipynb  sft_phase1_runpod_ablation_2000.ipynb  sft_phase1_runpod_ablation_2000_POD_COMPLETE.ipynb  sft_phase1_runpod_ablation_3000.ipynb
results/: README.md
scripts/: _check_notebook_cells_compile.py  _edit_runpod_notebook.py  _edit_runpod_wandb_cell.py  _edit_study_html.py  _fix_dpo_notebook.py  _fix_dpo_notebook_hf.py  _render_runbook_html.py  build_dpo_pairs.py  convert_checkpoint_to_hf.py  create_rlvr_notebooks.mjs  export_finchain_prompts.py  local_phase1_bootstrap.sh  local_phase1_minitest.sh  merge_dpo_pair_shards.py  render_learning_html.mjs  run_finchain_eval.py  sft_local_train.py  sft_smoke.py  train_finchain_trl_grpo.py  train_finchain_trl_online_dpo.py
tests/: test_build_dpo_pairs.py  test_checkpoint.py  test_cli_stats.py  test_config.py  test_data_schema.py  test_dataset.py  test_dpo.py  test_dpo_train_cli.py  test_eval_exact.py  test_eval_sources.py  test_finchain_loader.py  test_finchain_metrics.py  test_finchain_rlvr.py  test_grpo.py  test_gsm8k_loader.py  test_logprobs.py  test_loss_dtype.py  test_masking.py  test_math_loader.py  test_opd.py  test_optim.py  test_preference_data.py  test_safety.py  test_train_cli.py  test_trainer.py  test_trainer_nan_halt.py
(+65 files in other folders)
